<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/chooseEvent"
        android:icon="@drawable/baseline_calendar_month_24"
        android:orderInCategory="1"
        android:title="@string/choose_event"
        android:showAsAction="ifRoom"/>
    <item
        android:title="@string/add_new_event"
        android:id="@+id/addEvent"
        app:showAsAction="never"
        android:orderInCategory="2"
        />
    <item
        android:title="@string/change_event"
        android:id="@+id/changeEvent"
        app:showAsAction="never"
        android:orderInCategory="3"
        />
    <item
        android:title="@string/delete_this_event"
        android:id="@+id/deleteEvent"
        app:showAsAction="never"
        android:orderInCategory="4"
        />
</menu>