<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/simple_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/montserrat"
            android:textColor="#1E1E1E"
            android:text="@string/person"
            android:textSize="34sp" />

    </LinearLayout>


    <!-- В данном layout содержится разметка для collapsed состояния фрагмента -->
    <LinearLayout
        android:id="@+id/layout_collapsed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDetailName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/montserrat"
            android:textColor="#1E1E1E"
            android:text="Чтобы"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tvDetailBank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/montserrat"
            android:textColor="#1E1E1E"
            android:text="добавить человека,"
            android:textSize="28sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tvDetailNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/montserrat"
            android:textColor="#1E1E1E"
            android:text="потяните вверх"
            android:textSize="28sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <!-- В данном layout содержится разметка для развёрнутого состояния фрагмента
    Изначально она находится в состоянии invisible и располагается под layout_top как и layout_collapsed-->
    <LinearLayout
        android:id="@+id/layout_expanded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/bottom_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/montserrat"
            android:textColor="#1E1E1E"
            android:text="@string/to_change"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_tilayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNamePerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:fontFamily="@font/montserrat"
                android:textColor="#1E1E1E" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bank_tilayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBankPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:fontFamily="@font/montserrat"
                android:textColor="#1E1E1E" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/number_tilayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNumberPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:fontFamily="@font/montserrat"
                android:textColor="#1E1E1E" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDonePerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/done"
            android:textColor="@color/white"
            app:backgroundTint="@color/new_colorSecondary" />
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:indeterminateTint="#1E1E1E"
            android:layout_gravity="center" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>